--- a/src/main/resources/ventanas/Anadir_datos_video_ventanas.html
+++ b/src/main/resources/ventanas/Anadir_datos_video_ventanas.html
@@ -7,7 +7,10 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-form-layout size-auto margin="false">
+   <vaadin-form-layout width="446px" heigth="453px" :center>
+    <vaadin-label plain-text _id="titulo_subir_video">
+      Subir videos 
+    </vaadin-label>
     <vaadin-text-field caption="Titulo" _id="titulo"></vaadin-text-field>
     <vaadin-native-select caption="Categoria" data-item-type="java.lang.String" _id="categoria">
      <option item="Option1">Option 1</option>
@@ -17,9 +20,17 @@
     <vaadin-upload button-caption="Seleccionar video" caption="Ruta video" _id="ruta_video"></vaadin-upload>
     <vaadin-upload button-caption="Seleccionar miniatura" caption="Ruta miniatura" _id="ruta_miniatura"></vaadin-upload>
     <vaadin-date-field caption="Fecha del video subido" _id="fecha_video_subido"></vaadin-date-field>
-    <vaadin-label caption="Descripción video:" componentalignment="TOP-LEFT" plain-text _id="descripcion_video"></vaadin-label>
-    <vaadin-horizontal-layout >
-     <vaadin-text-area _id="area_descripcion"  ></vaadin-text-area>
+    <vaadin-label caption="Descripción video" componentalignment="TOP-LEFT" plain-text _id="descripcion_video"></vaadin-label>
+    <vaadin-horizontal-layout>
+     <vaadin-text-area _id="area_descripcion"></vaadin-text-area>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout>
+     <vaadin-button plain-text _id="atras_subir_video">
+       Atrás 
+     </vaadin-button>
+     <vaadin-button plain-text _id="subir_video">
+       subir 
+     </vaadin-button>
     </vaadin-horizontal-layout>
    </vaadin-form-layout>
   </vaadin-vertical-layout>
