--- a/src/main/resources/ventanas/Videos_relacionados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_relacionados_ventanas.html
@@ -6,13 +6,13 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout size-full margin>
-   <vaadin-horizontal-layout _id="buscador_layout" :center></vaadin-horizontal-layout>
-   <vaadin-horizontal-layout margin _id="iniciar_sesion_layout" :right>
-    <vaadin-button plain-text _id="iniciar_sesion">
-      Iniciar Sesión 
-    </vaadin-button>
-   </vaadin-horizontal-layout>
-  </vaadin-horizontal-layout>
+  <vaadin-vertical-layout size-full>
+   <vaadin-form-layout size-auto>
+    <vaadin-label plain-text _id="videos_relacionados">
+      Videos relacionados 
+    </vaadin-label>
+    <vaadin-vertical-layout size-auto _id="videos_relacionados_layout"></vaadin-vertical-layout>
+   </vaadin-form-layout>
+  </vaadin-vertical-layout>
  </body>
 </html>
