--- a/src/main/resources/ventanas/Zona_inicio_cabecera_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_cabecera_registrado_ventanas.html
@@ -7,10 +7,13 @@
  </head>
  <body>
   <vaadin-horizontal-layout size-full margin>
-   <vaadin-horizontal-layout _id="buscador_layout" :center></vaadin-horizontal-layout>
-   <vaadin-horizontal-layout margin _id="iniciar_sesion_layout" :right>
-    <vaadin-button plain-text _id="iniciar_sesion">
-      Iniciar Sesión 
+   <vaadin-horizontal-layout _id="buscador_layout"></vaadin-horizontal-layout>
+   <vaadin-horizontal-layout margin _id="iniciar_sesion_layout" :center>
+    <vaadin-button plain-text _id="mi_perfil">
+      Mi Perfil 
+    </vaadin-button>
+    <vaadin-button plain-text _id="cerrar_sesion">
+      Cerrar Sesión 
     </vaadin-button>
    </vaadin-horizontal-layout>
   </vaadin-horizontal-layout>
