--- a/src/main/resources/ventanas/Lista_videos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_ventanas.html
@@ -9,10 +9,18 @@
  <body>
   <vaadin-panel width="70%" height-full>
    <vaadin-horizontal-layout>
-    <vaadin-horizontal-layout _id="video_layout1"></vaadin-horizontal-layout>
-    <vaadin-horizontal-layout _id="video_layout2"></vaadin-horizontal-layout>
-    <vaadin-horizontal-layout _id="video_layout3"></vaadin-horizontal-layout>
-    <vaadin-horizontal-layout _id="video_layout4"></vaadin-horizontal-layout>
+    <vaadin-horizontal-layout _id="video_layout1">
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout _id="video_layout2">
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout _id="video_layout3">
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout _id="video_layout4">
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+    </vaadin-horizontal-layout>
    </vaadin-horizontal-layout>
   </vaadin-panel>
  </body>
