--- a/src/main/resources/ventanas/Listado_suscripciones_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscripciones_visitante_ventanas.html
@@ -10,10 +10,10 @@
   <vaadin-panel size-full>
    <vaadin-form-layout width="80%">
     <vaadin-label plain-text _id="titulo">
-      Listado de suscriptortes 
+      Listado de suscripciones de usuario x 
     </vaadin-label>
     <vaadin-label plain-text _id="subtitulo">
-      Usuarios que te siguen: 
+      Usuarios a los que sigue x: 
     </vaadin-label>
     <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
    </vaadin-form-layout>
