--- a/src/main/resources/ventanas/Lista_de_reproduccion_ventanas.html
+++ b/src/main/resources/ventanas/Lista_de_reproduccion_ventanas.html
@@ -8,15 +8,19 @@
  </head>
  <body>
   <vaadin-panel size-full>
-   <vaadin-form-layout width="80%">
-    <vaadin-label plain-text _id="titulo">
-      Listado de suscriptortes 
-    </vaadin-label>
-    <vaadin-label plain-text _id="subtitulo">
-      Usuarios que te siguen: 
-    </vaadin-label>
-    <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
-   </vaadin-form-layout>
+   <vaadin-vertical-layout size-auto>
+    <vaadin-form-layout size-auto margin="false" :center>
+     <vaadin-label plain-text _id="nombre_lista">
+       Lista de Reproducción 
+     </vaadin-label>
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+     <ventanas-video_ventanas></ventanas-video_ventanas>
+     <vaadin-button plain-text _id="atras">
+       Atrás 
+     </vaadin-button>
+    </vaadin-form-layout>
+   </vaadin-vertical-layout>
   </vaadin-panel>
  </body>
 </html>
