--- a/src/main/resources/ventanas/Lista_usuarios_ventanas.html
+++ b/src/main/resources/ventanas/Lista_usuarios_ventanas.html
@@ -8,15 +8,15 @@
  </head>
  <body>
   <vaadin-panel size-full>
-   <vaadin-form-layout width="80%">
-    <vaadin-label plain-text _id="titulo">
-      Listado de suscriptortes 
-    </vaadin-label>
-    <vaadin-label plain-text _id="subtitulo">
-      Usuarios que te siguen: 
-    </vaadin-label>
-    <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
-   </vaadin-form-layout>
+   <vaadin-vertical-layout>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <ventanas-usuario_ventanas></ventanas-usuario_ventanas>
+    <vaadin-button plain-text _id="atras">
+      Atrás 
+    </vaadin-button>
+   </vaadin-vertical-layout>
   </vaadin-panel>
  </body>
 </html>
