--- a/src/main/resources/ventanas/Perfil_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Perfil_registrado_ventanas.html
@@ -10,7 +10,7 @@
   <vaadin-panel size-full>
    <vaadin-vertical-layout size-auto>
     <vaadin-form-layout spacing="false" size-auto margin="false">
-     <ventanas-zona_cabecera_perfli_-registrado_ventanas></ventanas-zona_cabecera_perfli_-registrado_ventanas>
+     <ventanas-zona_cabecera_perfli_-registrado_ventanas _id="cabecera"></ventanas-zona_cabecera_perfli_-registrado_ventanas>
      <vaadin-horizontal-layout>
       <ventanas-zona_opciones_perfil_registrado_ventanas></ventanas-zona_opciones_perfil_registrado_ventanas>
       <ventanas-zona_cuerpo_perfil_registrado_ventanas></ventanas-zona_cuerpo_perfil_registrado_ventanas>
