--- a/src/main/resources/ventanas/Zona_cabecera_video_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_video_registrado_ventanas.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
-  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout>
-   <ventanas-zona_cabecera_video_invitado_ventanas></ventanas-zona_cabecera_video_invitado_ventanas>
-   <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
-  </vaadin-vertical-layout>
+  <vaadin-horizontal-layout width-full margin-right>
+   <vaadin-image width="250px" height="100px"></vaadin-image>
+   <vaadin-link caption="Link" responsive :middle :right></vaadin-link>
+  </vaadin-horizontal-layout>
  </body>
 </html>
