--- a/src/main/resources/ventanas/Zona_opciones_video_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_registrado_ventanas.html
@@ -4,12 +4,21 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
-  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout>
-   <ventanas-zona_cabecera_video_invitado_ventanas></ventanas-zona_cabecera_video_invitado_ventanas>
-   <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
-  </vaadin-vertical-layout>
+  <vaadin-horizontal-layout>
+   <vaadin-button plain-text _id="me_gusta">
+     Me gusta 
+   </vaadin-button>
+   <vaadin-button plain-text _id="descargar">
+     Descargar 
+   </vaadin-button>
+   <vaadin-button plain-text _id="crear_lista_reproduccion">
+     Crear lista reproducción 
+   </vaadin-button>
+   <vaadin-button plain-text _id="anadir_lista">
+     Añadir a lista de reproducción 
+   </vaadin-button>
+  </vaadin-horizontal-layout>
  </body>
 </html>
