--- a/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
@@ -6,10 +6,21 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout width-full>
-   <vaadin-image width="250px" height="100px"></vaadin-image>
-   <vaadin-button plain-text :middle :right>
-     Iniciar sesión 
+  <vaadin-horizontal-layout>
+   <vaadin-button plain-text _id="me_gusta">
+     Me gusta 
+   </vaadin-button>
+   <vaadin-button plain-text _id="descargar">
+     Descargar 
+   </vaadin-button>
+   <vaadin-button plain-text _id="crear_lista_reproduccion">
+     Crear lista reproducción 
+   </vaadin-button>
+   <vaadin-button plain-text _id="anadir_lista">
+     Añadir a lista de reproducción 
+   </vaadin-button>
+   <vaadin-button plain-text _id="eliminar">
+     Eliminar 
    </vaadin-button>
   </vaadin-horizontal-layout>
  </body>
