--- a/src/main/resources/ventanas/Lista_comentarios_anadibles_ventanas.html
+++ b/src/main/resources/ventanas/Lista_comentarios_anadibles_ventanas.html
@@ -10,12 +10,12 @@
    <vaadin-label plain-text _id="comentarios">
      Comentarios 
    </vaadin-label>
-   <vaadin-list-select data-item-type="ventanas.Comentario_ventanas" readonly _id="lista_comentarios"></vaadin-list-select>
+   <vaadin-list-select readonly data-item-type="ventanas.Comentario_ventanas" _id="lista_comentarios"></vaadin-list-select>
    <vaadin-label plain-text _id="anadir_comentario">
      Añadir comentario: 
    </vaadin-label>
    <vaadin-horizontal-layout>
-    <vaadin-text-area></vaadin-text-area>
+    <vaadin-text-area width="600px"></vaadin-text-area>
     <vaadin-button plain-text _id="anadir">
       Añadir 
     </vaadin-button>
