--- a/src/main/resources/ventanas/Zona_cabecera_video_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_video_propietario_ventanas.html
@@ -6,11 +6,9 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout width-full>
+  <vaadin-horizontal-layout width-full margin-right>
    <vaadin-image width="250px" height="100px"></vaadin-image>
-   <vaadin-button plain-text :middle :right>
-     Iniciar sesión 
-   </vaadin-button>
+   <vaadin-link caption="Mi perfil" _id="mi_perfil" :middle :right></vaadin-link>
   </vaadin-horizontal-layout>
  </body>
 </html>
