--- a/src/main/resources/ventanas/Zona_cabecera_video_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_video_registrado_ventanas.html
@@ -8,7 +8,7 @@
  <body>
   <vaadin-horizontal-layout width-full margin-right>
    <vaadin-image width="250px" height="100px"></vaadin-image>
-   <vaadin-link caption="Link" responsive :middle :right></vaadin-link>
+   <vaadin-link caption="Mi perfil" responsive _id="mi_perfil" :middle :right></vaadin-link>
   </vaadin-horizontal-layout>
  </body>
 </html>
