Cambia vertical layout de vaadin 7 por vertical layout de vaadin 8.

--- a/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
@@ -8,10 +8,10 @@
  <body>
   <vaadin-horizontal-layout width-full>
    <vaadin-image width="250px" height="125px"></vaadin-image>
-   <vaadin7-vertical-layout margin :right>
-    <vaadin-image width="100px" height="100px" :right></vaadin-image>
-    <vaadin-link caption="Cambiar imagen" _id="cambiar_imagen" :right></vaadin-link>
-   </vaadin7-vertical-layout>
+   <vaadin-vertical-layout size-auto :right>
+    <vaadin-image width="100px" height="100px"></vaadin-image>
+    <vaadin-link caption="Cambiar imagen" _id="cambiar_imagen"></vaadin-link>
+   </vaadin-vertical-layout>
   </vaadin-horizontal-layout>
  </body>
 </html>
