ventanas Listas comentarios

--- a/src/main/resources/ventanas/Lista_comentarios_anadibles_ventanas.html
+++ b/src/main/resources/ventanas/Lista_comentarios_anadibles_ventanas.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
+  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-vertical-layout>
    <vaadin-label plain-text _id="comentarios">
      Comentarios 
    </vaadin-label>
-   <vaadin-list-select readonly data-item-type="ventanas.Comentario_ventanas" _id="lista_comentarios"></vaadin-list-select>
+   <ventanas-comentario_ventanas></ventanas-comentario_ventanas>
+   <ventanas-comentario_ventanas></ventanas-comentario_ventanas>
    <vaadin-label plain-text _id="anadir_comentario">
      Añadir comentario: 
    </vaadin-label>
