--- a/src/main/resources/ventanas/Ficha_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_registrado_ventanas.html
@@ -9,8 +9,12 @@
  <body>
   <vaadin-vertical-layout>
    <ventanas-zona_cabecera_video_registrado_ventanas></ventanas-zona_cabecera_video_registrado_ventanas>
-   <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
-   <ventanas-zona_opciones_video_registrado></ventanas-zona_opciones_video_registrado>
+   <vaadin-form-layout size-auto>
+    <vaadin-horizontal-layout>
+     <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
+     <ventanas-zona_opciones_video_registrado></ventanas-zona_opciones_video_registrado>
+    </vaadin-horizontal-layout>
+   </vaadin-form-layout>
    <ventanas-lista_comentarios_anadibles></ventanas-lista_comentarios_anadibles>
   </vaadin-vertical-layout>
  </body>
