--- a/src/main/resources/ventanas/Ficha_video_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_video_ventanas.html
@@ -6,10 +6,10 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-vertical-layout responsive size-auto>
-   <vaadin-panel>
+  <vaadin-vertical-layout responsive>
+   <vaadin-panel size-auto>
     <vaadin-vertical-layout responsive size-auto>
-     <vaadin-video responsive></vaadin-video>
+     <vaadin-video responsive width="800px" height-full></vaadin-video>
      <vaadin-horizontal-layout responsive width-full margin-left margin-right>
       <vaadin-label responsive plain-text _id="titulo_video">
         Título video 
@@ -20,8 +20,8 @@
      </vaadin-horizontal-layout>
     </vaadin-vertical-layout>
    </vaadin-panel>
-   <vaadin-panel>
-    <vaadin-form-layout responsive width="75%" margin-left>
+   <vaadin-panel size-auto>
+    <vaadin-form-layout responsive width="824px" margin>
      <vaadin-link caption="Nombre Usuario"></vaadin-link>
      <vaadin-label plain-text _id="fecha_subida">
        Fecha Subida: 04/04/2018 
