Añade datos videos, (hay que quitar los botones atras y subir video)

--- a/src/main/resources/ventanas/Anadir_datos_video_ventanas.html
+++ b/src/main/resources/ventanas/Anadir_datos_video_ventanas.html
@@ -17,6 +17,7 @@
      <option item="Option2">Option 2</option>
      <option item="Option3">Option 3</option>
     </vaadin-native-select>
+     <vaadin-text-field caption="Etiqueta" _id="Etiqueta"></vaadin-text-field>
     <vaadin-upload button-caption="Seleccionar video" caption="Ruta video" _id="ruta_video"></vaadin-upload>
     <vaadin-upload button-caption="Seleccionar miniatura" caption="Ruta miniatura" _id="ruta_miniatura"></vaadin-upload>
     <vaadin-date-field caption="Fecha del video subido" _id="fecha_video_subido"></vaadin-date-field>
