--- a/src/main/resources/ventanas/Subir_video_ventanas.html
+++ b/src/main/resources/ventanas/Subir_video_ventanas.html
@@ -7,8 +7,20 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
-   <ventanas-anadir_datos_usuario_ventanas></ventanas-anadir_datos_usuario_ventanas>
+  <vaadin-vertical-layout spacing="false" size-auto margin="false">
+   <vaadin-form-layout spacing="false" size-auto margin="false" :center>
+    <vaadin-label plain-text _id="titulo_subir_nuevo_video">
+      Subir Nuevo Video
+    </vaadin-label>
+   </vaadin-form-layout>
+   <vaadin-form-layout spacing="false" size-auto margin="false">
+    <ventanas-anadir_datos_video_ventanas></ventanas-anadir_datos_video_ventanas>
+   </vaadin-form-layout>
+   <vaadin-form-layout spacing="false" size-auto margin="false" :center>
+    <vaadin-button plain-text _id="subir_video">
+      Subir 
+    </vaadin-button>
+   </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
