--- a/src/main/resources/ventanas/Lista_videos_agenos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_agenos_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
+  <vaadin-panel size-auto>
    <vaadin-vertical-layout size-auto>
     <vaadin-label plain-text _id="titulo">
       Videos subidos 
