--- a/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_propietario_ventanas.html
@@ -6,7 +6,7 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout>
+  <vaadin-form-layout size-auto margin>
    <vaadin-button plain-text _id="me_gusta">
      Me gusta 
    </vaadin-button>
@@ -22,6 +22,6 @@
    <vaadin-button plain-text _id="eliminar">
      Eliminar 
    </vaadin-button>
-  </vaadin-horizontal-layout>
+  </vaadin-form-layout>
  </body>
 </html>
