--- a/src/main/resources/ventanas/Anadir_datos_usuario_ventanas.html
+++ b/src/main/resources/ventanas/Anadir_datos_usuario_ventanas.html
@@ -8,9 +8,6 @@
  <body>
   <vaadin-vertical-layout size-full>
    <vaadin-form-layout width="446px" heigth="453px" :center>
-    <vaadin-label plain-text _id="titulo_registrar_usuario">
-      Registar usuarios 
-    </vaadin-label>
     <vaadin-text-field caption="Nombre" _id="nombre"></vaadin-text-field>
     <vaadin-text-field caption="Apellidos" _id="apellidos"></vaadin-text-field>
     <vaadin-text-field caption="Apodo" _id="apodo"></vaadin-text-field>
@@ -18,15 +15,7 @@
     <vaadin-text-field caption="contrasena" _id="contrasena"></vaadin-text-field>
     <vaadin-text-field caption="Repetir contraseña" _id="repetir_contrasena"></vaadin-text-field>
     <vaadin-date-field caption="Fecha nacimiento" _id="fecha_nacimiento"></vaadin-date-field>
-    <vaadin-upload caption="Seleccionar foto" _id="seleccionarFoto"></vaadin-upload>
-    <vaadin-horizontal-layout>
-     <vaadin-button plain-text _id="atras">
-       Atrás 
-     </vaadin-button>
-     <vaadin-button plain-text _id="aceptar">
-       Aceptar 
-     </vaadin-button>
-    </vaadin-horizontal-layout>
+    <vaadin-upload button-caption="Seleccionar foto" caption="Seleccionar foto" _id="seleccionarFoto"></vaadin-upload>
    </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
