--- a/src/main/resources/ventanas/Modificar_datos_ventanas.html
+++ b/src/main/resources/ventanas/Modificar_datos_ventanas.html
@@ -7,25 +7,19 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
-   <vaadin-form-layout width="446px" heigth="453px" :center>
+  <vaadin-vertical-layout spacing="false" size-auto margin="false">
+   <vaadin-form-layout spacing="false" size-auto margin="false" :center>
     <vaadin-label plain-text _id="modificar_datos_del_usuario">
       Modificar datos del usuario 
     </vaadin-label>
-    <vaadin-text-field caption="Nombre" _id="nombre"></vaadin-text-field>
-    <vaadin-text-field caption="Apellidos" _id="apellidos"></vaadin-text-field>
-    <vaadin-text-field caption="Apodo" _id="apodo"></vaadin-text-field>
-    <vaadin-text-field caption="Correo" _id="correo"></vaadin-text-field>
-    <vaadin-date-field caption="Fecha nacimiento" _id="fecha_nacimiento"></vaadin-date-field>
-    <vaadin-upload button-caption="Seleccionar foto" caption="Seleccionar foto" _id="seleccionarFoto"></vaadin-upload>
-    <vaadin-horizontal-layout>
-     <vaadin-button plain-text _id="atras">
-       Atrás 
-     </vaadin-button>
-     <vaadin-button plain-text _id="aceptar">
-       Aceptar 
-     </vaadin-button>
-    </vaadin-horizontal-layout>
+   </vaadin-form-layout>
+   <vaadin-form-layout spacing="false" size-auto margin="false">
+     <ventanas-anadir_datos_usuario_ventanas></ventanas-anadir_datos_usuario_ventanas>
+   </vaadin-form-layout>
+   <vaadin-form-layout spacing="false" size-auto margin="false" :center>
+    <vaadin-button plain-text _id="modificar">
+      Modificar 
+    </vaadin-button>
    </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
