--- a/src/main/resources/ventanas/Usuario_invitado_ventanas.html
+++ b/src/main/resources/ventanas/Usuario_invitado_ventanas.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
+  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-panel size-full>
    <vaadin-vertical-layout size-auto>
-    <vaadin-vertical-layout size-auto margin="false" _id="inicio" :center></vaadin-vertical-layout>
-    <vaadin-vertical-layout size-auto margin="false" _id="cuerpo" :center></vaadin-vertical-layout>
+    <ventanas-zona_inicio_cabecera_invitado_ventanas></ventanas-zona_inicio_cabecera_invitado_ventanas>
+    <ventanas-zona_inicio_comun_ventanas></ventanas-zona_inicio_comun_ventanas>
    </vaadin-vertical-layout>
   </vaadin-panel>
  </body>
