Editando la clase Registrar con su orm, para almacenar los datos mediante la interfaz

--- a/src/main/resources/ventanas/Registrarse_ventanas.html
+++ b/src/main/resources/ventanas/Registrarse_ventanas.html
@@ -10,11 +10,11 @@
   <vaadin-vertical-layout spacing="false" size-auto margin="false">
    <vaadin-form-layout spacing="false" size-auto margin="false" :center>
     <vaadin-label plain-text _id="registrarse">
-      Registrarse
+      Registrarse 
     </vaadin-label>
    </vaadin-form-layout>
    <vaadin-form-layout spacing="false" size-auto margin="false">
-     <ventanas-anadir_datos_usuario_ventanas></ventanas-anadir_datos_usuario_ventanas>
+    <ventanas-anadir_datos_usuario_ventanas _id="anadirDatos"></ventanas-anadir_datos_usuario_ventanas>
    </vaadin-form-layout>
    <vaadin-form-layout spacing="false" size-auto margin="false" :center>
     <vaadin-button plain-text _id="registrar">
