--- a/src/main/resources/ventanas/Anadir_datos_usuario_ventanas.html
+++ b/src/main/resources/ventanas/Anadir_datos_usuario_ventanas.html
@@ -6,13 +6,13 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
+  <vaadin-vertical-layout height="491px">
    <vaadin-form-layout width="446px" heigth="453px" :center>
     <vaadin-text-field caption="Nombre" _id="nombre"></vaadin-text-field>
     <vaadin-text-field caption="Apellidos" _id="apellidos"></vaadin-text-field>
     <vaadin-text-field caption="Apodo" _id="apodo"></vaadin-text-field>
     <vaadin-text-field caption="Correo" _id="correo"></vaadin-text-field>
-    <vaadin-text-field caption="contrasena" _id="contrasena"></vaadin-text-field>
+    <vaadin-text-field caption="Contraseña" _id="contrasena"></vaadin-text-field>
     <vaadin-text-field caption="Repetir contraseña" _id="repetir_contrasena"></vaadin-text-field>
     <vaadin-date-field caption="Fecha nacimiento" _id="fecha_nacimiento"></vaadin-date-field>
     <vaadin-upload button-caption="Seleccionar foto" caption="Seleccionar foto" _id="seleccionarFoto"></vaadin-upload>
