--- a/src/main/resources/ventanas/Zona_inicio_comun_ventanas.html
+++ b/src/main/resources/ventanas/Zona_inicio_comun_ventanas.html
@@ -3,14 +3,13 @@
  <head>
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
-  <meta name="vaadin-version" content="8.1.5">
+  <meta name="vaadin-version" content="8.0.5">
+  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel size-full>
-   <vaadin-vertical-layout size-auto margin="false">
-    <vaadin-vertical-layout size-auto margin="false" _id="videos_tendencias_layout"></vaadin-vertical-layout>
-    <vaadin-vertical-layout size-auto margin="false" _id="videos_usuarios_registrados_layout"></vaadin-vertical-layout>
-   </vaadin-vertical-layout>
-  </vaadin-panel>
+  <vaadin-vertical-layout spacing="false" responsive size-auto margin="false">
+   <ventanas-videos_tendencias_ventanas responsive></ventanas-videos_tendencias_ventanas>
+   <ventanas-videos_usuarios_registrados_ventanas responsive></ventanas-videos_usuarios_registrados_ventanas>
+  </vaadin-vertical-layout>
  </body>
 </html>
