Se añade navegabilidad en el perfil administrador, se ha cambiado los link por botones, se ha modificado el diseño del administrador

--- a/src/main/resources/ventanas/Crear_categoria_ventanas.html
+++ b/src/main/resources/ventanas/Crear_categoria_ventanas.html
@@ -16,9 +16,16 @@
     <option item="Option2">12</option>
     <option item="Option3">18</option>
    </vaadin-native-select>
-   <vaadin-button plain-text _id="crear_categoria_button">
-     Crear categoría 
-   </vaadin-button>
+   <vaadin-form-layout size-auto margin="false">
+    <vaadin-horizontal-layout>
+     <vaadin-button plain-text _id="atras">
+       Atrás 
+     </vaadin-button>
+     <vaadin-button plain-text _id="crear_categoria_button">
+       Crear categoría 
+     </vaadin-button>
+    </vaadin-horizontal-layout>
+   </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
