--- a/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscriptores_ventanas.html
@@ -16,6 +16,9 @@
       Usuarios que te siguen: 
     </vaadin-label>
     <ventanas-lista_usuarios_ventanas></ventanas-lista_usuarios_ventanas>
+    <vaadin-button plain-text _id="atras">
+      Atras 
+    </vaadin-button>
    </vaadin-form-layout>
   </vaadin-panel>
  </body>
