--- a/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
@@ -9,8 +9,12 @@
   <vaadin-horizontal-layout width-full>
    <vaadin-image width="250px" height="125px"></vaadin-image>
    <vaadin-vertical-layout size-auto :right>
-    <vaadin-image width="100px" height="100px"></vaadin-image>
-    <vaadin-link caption="Cambiar imagen" _id="cambiar_imagen"></vaadin-link>
+    <vaadin-button width="150px" height="150px" plain-text _id="imagen">
+      No imagen 
+    </vaadin-button>
+    <vaadin-button style-name="link" plain-text _id="cambiar_imagen">
+      Cambiar Imagen 
+    </vaadin-button>
    </vaadin-vertical-layout>
   </vaadin-horizontal-layout>
  </body>
