--- a/src/main/resources/ventanas/Zona_opciones_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_administrador_ventanas.html
@@ -7,10 +7,18 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-link caption="Crear categorías" _id="crear_categorias"></vaadin-link>
-   <vaadin-link caption="Lista de usuarios" _id="lista_usuarios"></vaadin-link>
-   <vaadin-link caption="Lista de videos" _id="lista_videos"></vaadin-link>
-   <vaadin-link caption="Cerrar sesión" _id="cerrar_sesion"></vaadin-link>
+   <vaadin-button style-name="link" plain-text _id="crear_categorias">
+     Crear categorías 
+   </vaadin-button>
+   <vaadin-button style-name="link" plain-text _id="lista_usuarios">
+     Lista de usuarios 
+   </vaadin-button>
+   <vaadin-button style-name="link" plain-text _id="lista_videos">
+     Lista de videos 
+   </vaadin-button>
+   <vaadin-button style-name="link" plain-text _id="cerrar_sesion">
+     Cerrar sesión 
+   </vaadin-button>
   </vaadin-vertical-layout>
  </body>
 </html>
