--- a/src/main/resources/ventanas/Cambiar_imagen_ventanas.html
+++ b/src/main/resources/ventanas/Cambiar_imagen_ventanas.html
@@ -8,15 +8,19 @@
  <body>
   <vaadin-vertical-layout>
    <vaadin-label plain-text _id="selecciona_img_label">
-     Seleccione una imagen en su sistema: 
+     Ponga la ruta de su nueva imagen 
    </vaadin-label>
-   <vaadin-horizontal-layout>
-    <vaadin-label plain-text _id="selected_route" :middle>
-      No hay ninguna ruta seleccionada 
-    </vaadin-label>
-    <vaadin-upload button-caption="Seleccione una ruta" _id="select_button"></vaadin-upload>
-   </vaadin-horizontal-layout>
-   <vaadin-image width="250px" height="250px" _id="photo" :middle :center></vaadin-image>
+   <vaadin-text-field value="Escriba la ruta..." _id="escribaLaRuta"></vaadin-text-field>
+   <vaadin-form-layout size-auto margin="false">
+    <vaadin-horizontal-layout>
+     <vaadin-button plain-text _id="atras">
+       Atrás 
+     </vaadin-button>
+     <vaadin-button plain-text _id="cambiar_imagen">
+       Cambiar Imagen 
+     </vaadin-button>
+    </vaadin-horizontal-layout>
+   </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
