se añade scroll en las ventanas inicio(modificando el tamaño de los paneles)

--- a/src/main/resources/ventanas/Lista_videos_ventanas.html
+++ b/src/main/resources/ventanas/Lista_videos_ventanas.html
@@ -7,7 +7,7 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-panel responsive width="70%" height-full>
+  <vaadin-panel responsive size-auto>
    <vaadin-horizontal-layout responsive>
     <vaadin-horizontal-layout responsive _id="video_layout1">
      <ventanas-video_ventanas responsive></ventanas-video_ventanas>
@@ -19,6 +19,9 @@
      <ventanas-video_ventanas responsive></ventanas-video_ventanas>
     </vaadin-horizontal-layout>
     <vaadin-horizontal-layout responsive _id="video_layout4">
+     <ventanas-video_ventanas responsive></ventanas-video_ventanas>
+    </vaadin-horizontal-layout>
+    <vaadin-horizontal-layout responsive _id="video_layout41">
      <ventanas-video_ventanas responsive></ventanas-video_ventanas>
     </vaadin-horizontal-layout>
    </vaadin-horizontal-layout>
