--- a/src/main/resources/ventanas/Videos_de_suscripciones_ventanas.html
+++ b/src/main/resources/ventanas/Videos_de_suscripciones_ventanas.html
@@ -12,10 +12,12 @@
     <vaadin-label plain-text _id="videos_de_suscripciones">
       Videos de actividades de Suscripciones 
     </vaadin-label>
-    <vaadin-vertical-layout size-auto _id="videos_de_suscripciones_layout">
+   </vaadin-form-layout>
+   <vaadin-panel width="70%">
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videos_ultimos_subidos_layout">
      <ventanas-lista_videos_ventanas></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
-   </vaadin-form-layout>
+   </vaadin-panel>
   </vaadin-vertical-layout>
  </body>
 </html>
