--- a/src/main/resources/ventanas/Videos_tendencias_ventanas.html
+++ b/src/main/resources/ventanas/Videos_tendencias_ventanas.html
@@ -12,10 +12,12 @@
     <vaadin-label responsive plain-text _id="videos_tendencias">
       Videos tendencias "Más me gusta" 
     </vaadin-label>
-    <vaadin-vertical-layout responsive size-auto _id="videos_tendencias_layout">
+   </vaadin-form-layout>
+   <vaadin-panel width="70%">
+    <vaadin-vertical-layout spacing="false" responsive size-auto margin="false" _id="videos_tendencias_layout">
      <ventanas-lista_videos_ventanas responsive></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
-   </vaadin-form-layout>
+   </vaadin-panel>
   </vaadin-vertical-layout>
  </body>
 </html>
