--- a/src/main/resources/ventanas/Videos_usuarios_registrados_ventanas.html
+++ b/src/main/resources/ventanas/Videos_usuarios_registrados_ventanas.html
@@ -7,15 +7,17 @@
   <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
+  <vaadin-vertical-layout size-auto>
    <vaadin-form-layout size-auto>
     <vaadin-label plain-text _id="videos_usuarios_registrados">
       Videos ultimos subidos por "usuarios registrados" 
     </vaadin-label>
-    <vaadin-vertical-layout size-auto _id="videos_ultimos_subidos_layout">
+   </vaadin-form-layout>
+   <vaadin-panel width="70%">
+    <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="videos_ultimos_subidos_layout">
      <ventanas-lista_videos_ventanas></ventanas-lista_videos_ventanas>
     </vaadin-vertical-layout>
-   </vaadin-form-layout>
+   </vaadin-panel>
   </vaadin-vertical-layout>
  </body>
 </html>
