Se añade la funcionalidad de modificar datos de perfil

--- a/src/main/resources/ventanas/Modificar_datos_ventanas.html
+++ b/src/main/resources/ventanas/Modificar_datos_ventanas.html
@@ -12,12 +12,12 @@
     <vaadin-label plain-text _id="modificar_datos_del_usuario">
       Modificar datos del usuario 
     </vaadin-label>
-    <ventanas-anadir_datos_usuario_ventanas></ventanas-anadir_datos_usuario_ventanas>
+    <ventanas-anadir_datos_usuario_ventanas _id="datosUsuario"></ventanas-anadir_datos_usuario_ventanas>
     <vaadin-horizontal-layout>
      <vaadin-button plain-text _id="atras">
        Atrás 
      </vaadin-button>
-     <vaadin-button plain-text _id="modificar">
+     <vaadin-button plain-text _id="modificarDatos">
        Modificar 
      </vaadin-button>
     </vaadin-horizontal-layout>
