Se actualizan las fichas de videos

--- a/src/main/resources/ventanas/Ficha_propietario_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_propietario_ventanas.html
@@ -8,8 +8,8 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <ventanas-zona_cabecera_video_registrado_ventanas></ventanas-zona_cabecera_video_registrado_ventanas>
-   <vaadin-form-layout size-auto>
+   <ventanas-zona_cabecera_video_propietario_ventanas _id="zcvp"></ventanas-zona_cabecera_video_propietario_ventanas>
+   <vaadin-form-layout size-auto margin="false">
     <vaadin-horizontal-layout>
      <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
      <ventanas-zona_opciones_video_propietario_ventanas></ventanas-zona_opciones_video_propietario_ventanas>
