--- a/src/main/resources/ventanas/Ficha_video_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_video_ventanas.html
@@ -14,7 +14,7 @@
       <vaadin-label responsive plain-text _id="titulo_video">
         Título video 
       </vaadin-label>
-      <vaadin-label responsive plain-text _id="numero_me_gusta" :right>
+      <vaadin-label responsive width="112px" plain-text _id="numero_me_gusta" :right>
         0 me gusta 
       </vaadin-label>
      </vaadin-horizontal-layout>
@@ -22,7 +22,9 @@
    </vaadin-panel>
    <vaadin-panel size-auto>
     <vaadin-form-layout responsive width="824px" margin>
-     <vaadin-link caption="Nombre Usuario"></vaadin-link>
+     <vaadin-button style-name="link" plain-text _id="nombre_usuario">
+       Nombre Usuario 
+     </vaadin-button>
      <vaadin-label plain-text _id="fecha_subida">
        Fecha Subida: 04/04/2018 
      </vaadin-label>
