--- a/src/main/resources/ventanas/Zona_cabecera_video_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_video_administrador_ventanas.html
@@ -6,15 +6,15 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-vertical-layout spacing="false" responsive>
-   <vaadin-form-layout spacing="false" responsive size-auto :right>
-    <vaadin-button width="150px" height="150px" plain-text _id="imagen">
-      No imagen 
+  <vaadin-horizontal-layout spacing="false" responsive width-full margin>
+   <vaadin-horizontal-layout width-full>
+    <vaadin-button style-name="huge borderless" plain-text _id="logo">
+      Garbiñe Youtube_administrador 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="miPerfilAdministrador">
-      Mi perfil Administrador 
+    <vaadin-button icon="fonticon://Vaadin-Icons/e962" plain-text _id="mi_perfil">
+      Mi perfil 
     </vaadin-button>
-   </vaadin-form-layout>
-  </vaadin-vertical-layout>
+   </vaadin-horizontal-layout>
+  </vaadin-horizontal-layout>
  </body>
 </html>
