--- a/src/main/resources/ventanas/Zona_cabecera_video_invitado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_video_invitado_ventanas.html
@@ -7,10 +7,14 @@
  </head>
  <body>
   <vaadin-horizontal-layout width-full>
-   <vaadin-image width="250px" height="100px"></vaadin-image>
-   <vaadin-button plain-text :middle :right>
-     Iniciar sesión 
-   </vaadin-button>
+   <vaadin-horizontal-layout width-full>
+    <vaadin-button style-name="huge borderless" plain-text _id="logo">
+      Garbiñe Youtube_invitado 
+    </vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e6ac" plain-text _id="iniciar_sesion">
+      Iniciar sesión 
+    </vaadin-button>
+   </vaadin-horizontal-layout>
   </vaadin-horizontal-layout>
  </body>
 </html>
