--- a/src/main/resources/ventanas/Zona_opciones_video_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_administrador_ventanas.html
@@ -6,13 +6,13 @@
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
-  <vaadin-horizontal-layout>
-   <vaadin-button plain-text _id="descargar">
+  <vaadin-form-layout size-auto margin>
+   <vaadin-button icon="fonticon://Vaadin-Icons/e6f0" plain-text _id="descargar">
      Descargar 
    </vaadin-button>
-   <vaadin-button plain-text _id="anadir_lista">
-     Añadir a lista de reproducción 
+   <vaadin-button icon="fonticon://Vaadin-Icons/e811" plain-text _id="eliminar">
+     Eliminar 
    </vaadin-button>
-  </vaadin-horizontal-layout>
+  </vaadin-form-layout>
  </body>
 </html>
