--- a/src/main/resources/ventanas/Zona_opciones_video_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_video_registrado_ventanas.html
@@ -7,16 +7,16 @@
  </head>
  <body>
   <vaadin-form-layout size-auto margin>
-   <vaadin-button plain-text _id="me_gusta">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e780" plain-text _id="me_gusta">
      Me gusta 
    </vaadin-button>
-   <vaadin-button plain-text _id="descargar">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e6f0" plain-text _id="descargar">
      Descargar 
    </vaadin-button>
-   <vaadin-button plain-text _id="crear_lista_reproduccion">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e7ff" plain-text _id="crear_lista_reproduccion">
      Crear lista reproducción 
    </vaadin-button>
-   <vaadin-button plain-text _id="anadir_lista">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e656" plain-text _id="anadir_lista">
      Añadir a lista de reproducción 
    </vaadin-button>
   </vaadin-form-layout>
