--- a/src/main/resources/ventanas/Ficha_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_administrador_ventanas.html
@@ -9,8 +9,12 @@
  <body>
   <vaadin-vertical-layout>
    <ventanas-zona_cabecera_video_administrador_ventanas></ventanas-zona_cabecera_video_administrador_ventanas>
-   <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
-   <ventanas-zona_opciones_video_administrador_ventanas></ventanas-zona_opciones_video_administrador_ventanas>
+   <vaadin-form-layout size-auto margin="false">
+    <vaadin-horizontal-layout>
+     <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
+     <ventanas-zona_opciones_video_administrador_ventanas></ventanas-zona_opciones_video_administrador_ventanas>
+    </vaadin-horizontal-layout>
+   </vaadin-form-layout>
    <ventanas-lista_comentarios_anadibles_ventanas></ventanas-lista_comentarios_anadibles_ventanas>
   </vaadin-vertical-layout>
  </body>
