--- a/src/main/resources/ventanas/Ficha_invitado_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_invitado_ventanas.html
@@ -8,8 +8,8 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <ventanas-zona_cabecera_video_invitado_ventanas></ventanas-zona_cabecera_video_invitado_ventanas>
-   <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
+   <ventanas-zona_cabecera_video_invitado_ventanas _id="zcvi"></ventanas-zona_cabecera_video_invitado_ventanas>
+   <ventanas-ficha_video_ventanas _id="fvv"></ventanas-ficha_video_ventanas>
   </vaadin-vertical-layout>
  </body>
 </html>
