--- a/src/main/resources/ventanas/Ficha_registrado_ventanas.html
+++ b/src/main/resources/ventanas/Ficha_registrado_ventanas.html
@@ -9,7 +9,7 @@
  <body>
   <vaadin-vertical-layout>
    <ventanas-zona_cabecera_video_registrado_ventanas></ventanas-zona_cabecera_video_registrado_ventanas>
-   <vaadin-form-layout size-auto>
+   <vaadin-form-layout size-auto margin="false">
     <vaadin-horizontal-layout>
      <ventanas-ficha_video_ventanas></ventanas-ficha_video_ventanas>
      <ventanas-zona_opciones_video_registrado></ventanas-zona_opciones_video_registrado>
