--- a/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_cabecera_administrador_ventanas.html
@@ -12,7 +12,7 @@
     <vaadin-button width="150px" height="150px" plain-text _id="imagen">
       No imagen 
     </vaadin-button>
-    <vaadin-button style-name="link" plain-text _id="cambiar_imagen">
+    <vaadin-button icon="fonticon://Vaadin-Icons/e7fa" style-name="link" plain-text _id="cambiar_imagen">
       Cambiar Imagen 
     </vaadin-button>
    </vaadin-vertical-layout>
