--- a/src/main/resources/ventanas/Perfil_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Perfil_administrador_ventanas.html
@@ -8,8 +8,10 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <ventanas-zona_cabecera_administrador_ventanas _id="zcav"></ventanas-zona_cabecera_administrador_ventanas>
-   <ventanas-zona_opciones_administrador_ventanas _id="zoav"></ventanas-zona_opciones_administrador_ventanas>
+   <ventanas-zona_cabecera_administrador_ventanas _id="zcav" :center></ventanas-zona_cabecera_administrador_ventanas>
+   <vaadin-form-layout size-auto margin="false" :center>
+    <ventanas-zona_opciones_administrador_ventanas _id="zoav"></ventanas-zona_opciones_administrador_ventanas>
+   </vaadin-form-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
