--- a/src/main/resources/ventanas/Zona_opciones_administrador_ventanas.html
+++ b/src/main/resources/ventanas/Zona_opciones_administrador_ventanas.html
@@ -7,16 +7,16 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-button style-name="link" plain-text _id="crear_categorias">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e7ff" style-name="link" plain-text _id="crear_categorias">
      Crear categorías 
    </vaadin-button>
-   <vaadin-button style-name="link" plain-text _id="lista_usuarios">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e747" style-name="link" plain-text _id="lista_usuarios">
      Lista de usuarios 
    </vaadin-button>
-   <vaadin-button style-name="link" plain-text _id="lista_videos">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e731" style-name="link" plain-text _id="lista_videos">
      Lista de videos 
    </vaadin-button>
-   <vaadin-button style-name="link" plain-text _id="cerrar_sesion">
+   <vaadin-button icon="fonticon://Vaadin-Icons/e798" style-name="link" plain-text _id="cerrar_sesion">
      Cerrar sesión 
    </vaadin-button>
   </vaadin-vertical-layout>
